Fix for horizontal scrolling on mobile

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -67,6 +67,9 @@ select#control-format {
 	padding-top: 3%;
 	padding-bottom: 3%;
 
+	// This was causing horizontal scrolling on smaller screens
+	min-width: unset;
+
 	iframe {
 		padding: 0 12%;
 		width: 100%;
